# CornerDetection-Grayscale-

./: README.md
PiProject/: CMakeLists.txt  DocumentatiePI.docx  main.cpp
